# numpy-user-dtypes

./: .clang-format  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  h  mandelbrot.py  meson.build  pyproject.toml  setup.py  setup_miniconda.ps1  temp.py
.github/: dependabot.yml
.github/workflows/: asan.yml  big_endian.yml  build_docs.yml  build_linux.yml  build_macos.yml  build_wheel.yml  build_wheels.yml  build_wheels_and_release.yml  build_windows.yml  ci.yml  compiler_sanitization.yml  metadatadtype-ci.yml  release_and_pypi.yml  typecheck.yml  windows.yml
asciidtype/: .flake8  README.md  meson.build  pyproject.toml  reinstall.sh
asciidtype/asciidtype/: __init__.py  scalar.py
asciidtype/asciidtype/src/: asciidtype_main.c  casts.c  casts.h  dtype.c  dtype.h  umath.c  umath.h
asciidtype/tests/: test_asciidtype.py
asv_benchmarks/: asv.conf.json
asv_benchmarks/benchmarks/: strings.py
benchmarks/: asv.conf.json  benchmarks.py
metadatadtype/: .pre-commit-config.yaml  __init__.py  _helpers.py  meson.build  pyproject.toml  reinstall.sh  scalar.py
metadatadtype/metadatadtype/: __init__.py  scalar.py
metadatadtype/metadatadtype/src/: casts.c  casts.h  dtype.c  dtype.h  metadatadtype_main.c  umath.c  umath.h
metadatadtype/src/: casts.c  casts.h  dtype.c  dtype.h  metadatadtype_main.c  umath.c  umath.h  unitdtype_main.c
metadatadtype/tests/: test_metadatadtype.py
mpfdtype/: README.md  __init__.py  meson.build  pyproject.toml  reinstall.sh
mpfdtype/mpfdtype/: __init__.py
mpfdtype/mpfdtype/src/: casts.cpp  dtype.c  dtype.h  mpfdtype_main.c  numbers.cpp  ops.hpp  scalar.c  terrible_hacks.c  terrible_hacks.h  umath.cpp  umath.h
mpfdtype/mpfdtype/tests/: test_array.py  test_scalar.py
mpfdtype/src/: casts.c  casts.cpp  casts.h  dtype.c  dtype.h  mpfdtype_main.c  numbers.cpp  numbers.h  ops.hpp  scalar.c  scalar.h  terrible_hacks.c  umath.c  umath.cpp  umath.h
quaddtype/: .flake8  .pre-commit-config.yaml  LICENSE  README.md  __init__.py  build_log.txt  meson.build  pyproject.toml  quadscalar.py  reinstall.sh  release_tracker.md  sdist_test.sh
quaddtype/docs/: api_docs.rst  changelog.md  conf.py  contributing.md  index.md  installation.md
quaddtype/docs/api/: constants_api.md  core.md  functions.md  index.md  utilities.md
quaddtype/docs/user_guide/: arrays.md  backends.md  constants.md  functions.md  index.md  performance.md  precision.md  threading.md
quaddtype/numpy_quaddtype/: __init__.py  __init__.pyi  _quaddtype_main.pyi
quaddtype/numpy_quaddtype/src/: casts.cpp  constants.hpp  dragon4.c  dragon4.h  dtype.c  dtype.h  lock.h  ops.hpp  quad_common.h  quadblas_interface.cpp  quadblas_interface.h  quaddtype_main.c  scalar.c  scalar.h  scalar_ops.cpp  umath.cpp  utilities.c  utilities.h
quaddtype/numpy_quaddtype/src/umath/: binary_ops.cpp  comparison_ops.cpp  frexp_op.cpp  frexp_op.h  matmul.cpp  matmul.h  umath.cpp  unary_ops.cpp  unary_ops.h  unary_props.cpp
quaddtype/quaddtype/: __init__.py  quadscalar.py
quaddtype/quaddtype/src/: casts.c  casts.cpp  casts.h  dtype.c  dtype.h  ops.hpp  quaddtype_main.c  scalar.c  scalar.h  scalar_ops.cpp  scalar_ops.h  umath.c  umath.cpp  umath.h
quaddtype/src/: additional_numeric_casts.c.src  casts.c  casts.h  dtype.c  dtype.h  quaddtype_main.c  scalar.c  scalar.h  umath.c  umath.h  unitdtype_main.c
quaddtype/src/csrc/: casts.cpp  dragon4.c  dtype.c  lock.c  ops.hpp  quadblas_interface.cpp  quadblas_interface.h  quaddtype_main.c  scalar.c  scalar_ops.cpp  utilities.c  utilities.h
quaddtype/src/csrc/umath/: binary_ops.cpp  comparison_ops.cpp  comparison_ops.h  matmul.cpp  matmul.h  promoters.hpp  umath.cpp  umath.h  unary_ops.cpp  unary_props.cpp  unary_props.h
quaddtype/src/include/: dragon4.h  scalar.h
quaddtype/src/include/umath/: binary_ops.h
quaddtype/src/numpy_quaddtype/: __init__.py  _quaddtype_main.pyi
quaddtype/subprojects/: pythoncapi-compat.wrap  qblas.wrap  sleef.wrap
quaddtype/subprojects/packagefiles/qblas/: meson.build
quaddtype/subprojects/packagefiles/sleef/: meson.build
quaddtype/tests/: test.py  test_arr.py  test_dot.py  test_finfo.py  test_multithreading.py  test_quaddtype.py  utils.py
quaddtype2/: meson.build  pyproject.toml  reinstall.sh
quaddtype2/quaddtype/: __init__.py  scalar.py
quaddtype2/quaddtype/src/: casts.cpp  casts.h  dtype.c  dtype.h  quaddtype_main.c  scalar.c
stringdtype/: README.md  meson.build  pyproject.toml  reinstall.sh
stringdtype/stringdtype/: __init__.py  missing.py  scalar.py
stringdtype/stringdtype/src/: casts.c  casts.h  dtype.c  dtype.h  main.c  scalar.c  scalar.h  static_string.c  static_string.h  umath.c
stringdtype/tests/: conftest.py  test_char.py  test_stringdtype.py
strptrdtype/: meson.build  pyproject.toml
strptrdtype/strptrdtype/: __init__.py  scalar.py
strptrdtype/strptrdtype/src/: casts.c  casts.h  dtype.c  dtype.h  main.c  umath.c
tests/: test_metadatadtype.py  test_quaddtype.py  test_unytdtype.py
unytdtype/: .gitignore  LICENSE  README.md  __init__.py  meson.build  pyproject.toml  reinstall.sh  scalar.py
unytdtype/src/: casts.c  casts.h  dtype.c  dtype.h  umath.c  unytdtype_main.c
unytdtype/tests/: test_unytdtype.py
unytdtype/unytdtype/: __init__.py  scalar.py
unytdtype/unytdtype/src/: casts.c  casts.h  dtype.c  dtype.h  umath.c  umath.h  unytdtype_main.c
