[build-system]
requires = [
    "meson>=0.63.0",
    "meson-python",
    "patchelf",
    "wheel",
    "numpy @ https://pypi.anaconda.org/scipy-wheels-nightly/simple/numpy/1.24.0.dev0%2B896.g5ecaf36cd/numpy-1.24.0.dev0%2B896.g5ecaf36cd-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl",
]
build-backend = "mesonpy"

[project]
name = "quaddtype"
description = "Quad (128-bit) float dtype for numpy"
version = "0.0.1"
readme = 'README.md'
author = "Peyton Murray"
requires-python = ">=3.9.0"
dependencies = [
    "numpy @ https://pypi.anaconda.org/scipy-wheels-nightly/simple/numpy/1.24.0.dev0%2B896.g5ecaf36cd/numpy-1.24.0.dev0%2B896.g5ecaf36cd-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"
]
