[build-system]
requires = [
    "meson>=0.63.0",
    "meson-python",
    "patchelf",
    "wheel",
    "numpy",
]
build-backend = "mesonpy"

[tool.black]
line-length = 79

[project]
name = "asciidtype"
description = "A dtype for ASCII data"
version = "0.0.1"
readme = 'README.md'
author = "Nathan Goldbaum"
requires-python = ">=3.9.0"
dependencies = [
    "numpy",
]
