[build-system]
requires = [
    "meson>=1.3.2",
    "meson-python",
    "wheel",
    "numpy"
]
build-backend = "mesonpy"

[project]
name = "numpy_quaddtype"
description = "Quad (128-bit) float dtype for numpy"
version = "0.2.2"
readme = 'README.md'
license = { file = "LICENSE" }
authors = [{name = "Swayam Singh", email = "singhswayam008@gmail.com"}]
requires-python = ">=3.10.0"
dependencies = [
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-run-parallel"
]