[build-system]
requires = [
    "meson>=1.3.2",
    "meson-python>=0.18.0",
    "wheel",
    "numpy>=2.0"
]
build-backend = "mesonpy"

[project]
name = "numpy_quaddtype"
description = "Quad (128-bit) float dtype for numpy"
version = "0.2.0"
readme = 'README.md'
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{name = "Swayam Singh", email = "singhswayam008@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Free Threading",
    "Typing :: Typed",
]
requires-python = ">=3.11.0"
dependencies = [
    "numpy>=2.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "mpmath",
    "pytest-run-parallel"
]

[project.urls]
Repository = "https://github.com/numpy/numpy-user-dtypes"
Documentation = "https://github.com/numpy/numpy-user-dtypes/tree/main/quaddtype"
Issues = "https://github.com/numpy/numpy-user-dtypes/issues"

[tool.pyright]
include = ["numpy_quaddtype/*.pyi"]
typeCheckingMode = "strict"
enableTypeIgnoreComments = false
reportImplicitOverride = true
reportUnnecessaryTypeIgnoreComment = true

[tool.mypy]
strict = true
strict_equality_for_none = true
exclude = ["build", "numpy_quaddtype/src", "subprojects", "tests"]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = false

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["subprojects", "build", ".mesonpy*"]
