[build-system]
requires = [
    "meson>=0.63.0",
    "meson-python",
    "patchelf",
    "wheel",
    "numpy",
]
build-backend = "mesonpy"

[tool.black]
line-length = 79

[project]
name = "strptrdtype"
description = "A dtype for storing string pointers data"
version = "0.0.1"
readme = 'README.md'
author = "Peyton Murray"
requires-python = ">=3.9.0"
dependencies = [
    "numpy",
]
