[build-system]
requires = [
    "meson>=0.63.0",
    "meson-python",
    "patchelf",
    "wheel",
    "numpy",
]
build-backend = "mesonpy"

[project]
name = "unytdtype"
description = "A unit dtype backed by unyt"
version = "0.0.1"
readme = 'README.md'
author = "Nathan Goldbaum"
requires-python = ">=3.9.0"
dependencies = [
    "numpy"
]
